globus-gssapi-gsi (11.28-2+gt6.@distro@) @distro@; urgency=low

  * Add libltdl3-dev build dependency

 -- Globus Toolkit <support@globus.org>  Thu, 21 Apr 2016 09:43:42 -0500

globus-gssapi-gsi (11.28-1+gt6.@distro@) @distro@; urgency=low

  * Add support for certificates without a CN

 -- Globus Toolkit <support@globus.org>  Tue, 19 Apr 2016 10:04:26 -0400

globus-gssapi-gsi (11.27-1+gt6.@distro@) @distro@; urgency=low

  * Updates to get tests to run on El Capitan

 -- Globus Toolkit <support@globus.org>  Tue, 12 Apr 2016 14:13:41 -0400

globus-gssapi-gsi (11.26-1+gt6.@distro@) @distro@; urgency=low

  * Fix FORCE_TLS setting to allow TLSv1.1 and TLS1.2, not just TLSv1.0

 -- Globus Toolkit <support@globus.org>  Mon, 25 Jan 2016 14:52:49 -0600

globus-gssapi-gsi (11.25-1+gt6.@distro@) @distro@; urgency=low

  * support loading mutiple extra CA certs

 -- Globus Toolkit <support@globus.org>  Wed, 16 Dec 2015 09:19:30 -0600

globus-gssapi-gsi (11.24-1+gt6.@distro@) @distro@; urgency=low

  * Don't call SSLv3_method unless it is available

 -- Globus Toolkit <support@globus.org>  Fri, 04 Dec 2015 10:12:26 -0500

globus-gssapi-gsi (11.23-1+gt6.@distro@) @distro@; urgency=low

  * Remove @} without matching @{

 -- Globus Toolkit <support@globus.org>  Wed, 25 Nov 2015 16:15:21 -0500

globus-gssapi-gsi (11.22-1+gt6.@distro@) @distro@; urgency=low

  * GT-627: gss_import_cred crash
  * Improve portability for some tests

 -- Globus Toolkit <support@globus.org>  Tue, 08 Sep 2015 16:47:27 -0400

globus-gssapi-gsi (11.21-1+gt6.@distro@) @distro@; urgency=low

  * Find thread libs for in-tree testing

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jul 2015 22:40:07 -0400

globus-gssapi-gsi (11.20-1+gt6.@distro@) @distro@; urgency=low

  * GT-614: GLOBUS_GSS_C_NT_HOST_IP doesn't allow host-only imports and comparisons

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jul 2015 15:13:43 -0400

globus-gssapi-gsi (11.19-1+gt6.@distro@) @distro@; urgency=low
